--- a/static/stylehome.css
+++ b/static/stylehome.css
@@ -4,10 +4,13 @@
     font-family: Century, sans-serif;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden; /* Evitar desplazamiento horizontal no deseado */
+html, body {
+   
+    width: 100%; /* Asegura que el cuerpo ocupe todo el ancho */
+    height: 100%; /* Asegura que el cuerpo ocupe todo el alto del viewport */
+
+    overflow-x: hidden; 
+    overflow-y: hidden; /* Añadido para evitar barras de desplazamiento no deseadas */
 }
 
 header {
