--- a/static/styleIndex.css
+++ b/static/styleIndex.css
@@ -22,7 +22,8 @@ html, body {
 }
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('./fotos/montañaSieteColores.png'); /* Imagen de fondo debajo del gradiente */
     height: 100vh;
     margin: 0;
     padding: 0;
