--- a/static/styleIndex.css
+++ b/static/styleIndex.css
@@ -55,7 +55,7 @@ header {
         background-image: url(./fotos/tarapoto.png);
     }
     80% {
-        background-image: url(./fotos/colca.png);
+        background-image: url(./fotos/pozuzo.png);
     }
     100% {
         background-image: url(./fotos/puno.png);
