--- a/static/styleIndex.css
+++ b/static/styleIndex.css
@@ -49,7 +49,7 @@ header {
         background-image: url(./fotos/arequipa.png);
     }
     40% {
-        background-image: url(./fotos/paracas.png);
+        background-image: url(./fotos/machupucchu.jpg);
     }
     60% {
         background-image: url(./fotos/tarapoto.png);
