fix: ok index css

--- a/static/styleIndex.css
+++ b/static/styleIndex.css
@@ -49,7 +49,7 @@ header {
         background-image: url(./fotos/arequipa.png);
     }
     40% {
-        background-image: url(./fotos/machupicchu5.jpg);
+        background-image: url(./fotos/lima.png);
     }
     60% {
         background-image: url(./fotos/tarapoto.png);
